[gd_scene load_steps=43 format=3 uid="uid://iavbbnd70b78"]

[ext_resource type="Script" path="res://scripts/enemies/Archer.gd" id="1_w88m3"]
[ext_resource type="Texture2D" uid="uid://bgmynisrtv6pw" path="res://assets/enemies/archer/GandalfHardcore Archer sheet.png" id="2_7wahy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rlneg"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syosu"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn6a0"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci6yk"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ogbb"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3u2h"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wt6a"]
atlas = ExtResource("2_7wahy")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aro4j"]
atlas = ExtResource("2_7wahy")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujinv"]
atlas = ExtResource("2_7wahy")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57dld"]
atlas = ExtResource("2_7wahy")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qef6"]
atlas = ExtResource("2_7wahy")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfqgl"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4kww"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q7x3"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fikt1"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh44w"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi416"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un751"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ihv4"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odsc"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa7kw"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuokc"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18iwy"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qke65"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_byckr"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt8es"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nngf7"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwopr"]
atlas = ExtResource("2_7wahy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrl2q"]
atlas = ExtResource("2_7wahy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgxb4"]
atlas = ExtResource("2_7wahy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wafgp"]
atlas = ExtResource("2_7wahy")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs5q0"]
atlas = ExtResource("2_7wahy")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vwjw"]
atlas = ExtResource("2_7wahy")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf2bj"]
atlas = ExtResource("2_7wahy")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrg3t"]
atlas = ExtResource("2_7wahy")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0wona"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlneg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syosu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn6a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci6yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ogbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3u2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wt6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aro4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujinv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57dld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qef6")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfqgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4kww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q7x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fikt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh44w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi416")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_un751")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ihv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa7kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuokc")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18iwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qke65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byckr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt8es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nngf7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwopr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrl2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgxb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wafgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs5q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vwjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf2bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrg3t")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3khgf"]
radius = 16.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pqsfr"]
radius = 265.37

[sub_resource type="CircleShape2D" id="CircleShape2D_gokls"]
radius = 171.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpofg"]
radius = 15.0
height = 46.0

[node name="Archer" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_w88m3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0wona")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 11)
shape = SubResource("CapsuleShape2D_3khgf")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_pqsfr")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_gokls")

[node name="Hitbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 0
collision_layer = 32768
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5, 9)
shape = SubResource("CapsuleShape2D_kpofg")
